src/VrmlAPI/VrmlAPI_Writer.hxx
@@ -105,12 +105,12 @@ public:
   
   //! Converts the shape aShape to
   //! VRML format of the passed version and writes it to the file identified by aFile.
-  Standard_EXPORT void Write (const TopoDS_Shape& aShape, const Standard_CString aFile,
+  Standard_EXPORT Standard_Boolean Write (const TopoDS_Shape& aShape, const Standard_CString aFile,
       const Standard_Integer aVersion = 2) const;
 
   //! Converts the document to VRML format of the passed version
   //! and writes it to the file identified by aFile.
-  Standard_EXPORT void WriteDoc(
+  Standard_EXPORT Standard_Boolean WriteDoc(
     const Handle(TDocStd_Document) &theDoc,
     const Standard_CString theFile,
     const Standard_Real theScale) const;
@@ -119,11 +119,11 @@ protected:
 
   //! Converts the shape aShape to VRML format of version 1.0 and writes it
   //! to the file identified by aFileName using default parameters.
-  Standard_EXPORT void write_v1 (const TopoDS_Shape& aShape, const Standard_CString aFileName) const;
+  Standard_EXPORT Standard_Boolean write_v1 (const TopoDS_Shape& aShape, const Standard_CString aFileName) const;
   
   //! Converts the shape aShape to VRML format of version 2.0 and writes it
   //! to the file identified by aFileName using default parameters.
-  Standard_EXPORT void write_v2 (const TopoDS_Shape& aShape, const Standard_CString aFileName) const;
+  Standard_EXPORT Standard_Boolean write_v2 (const TopoDS_Shape& aShape, const Standard_CString aFileName) const;
 
 private:
 
